<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".New_Property_Page">

    <!-- TODO: Update blank fragment layout -->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/address"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_address"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp" />

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:autofillHints=""
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:labelFor="@string/address"
            android:minHeight="30dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            tools:ignore="LabelFor,MissingConstraints"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="57dp" />


        <TextView
            android:id="@+id/suburb"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/suburb"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/edit_address"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="4dp" />

        <EditText
            android:id="@+id/edit_suburb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:autofillHints=""
            android:hint="@string/suburb"
            android:inputType="textPersonName"
            android:labelFor="@string/suburb"
            android:minHeight="30dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/suburb"
            tools:ignore="LabelFor,MissingConstraints"
            tools:layout_editor_absoluteX="24dp" />

        <TextView
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/state"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/edit_suburb"
            tools:layout_editor_absoluteX="20dp" />

        <EditText
            android:id="@+id/edit_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:autofillHints=""
            android:hint="@string/state"
            android:inputType="textPersonName"
            android:labelFor="@string/state"
            android:minHeight="30dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/state"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/postcode"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/postcode"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/edit_state"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />

        <EditText
            android:id="@+id/edit_postcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:autofillHints=""
            android:hint="@string/postcode"
            android:inputType="textPersonName"
            android:labelFor="@string/postcode"
            android:minHeight="30dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/postcode"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/price"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/edit_postcode"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="33dp" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:autofillHints=""
            android:hint="@string/price"
            android:inputType="number"
            android:labelFor="@string/price"
            android:minHeight="30dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/price"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp" />

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="BACK"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_price"
            tools:layout_editor_absoluteX="-14dp" />

        <Button
            android:id="@+id/new_property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/new_property"
            app:layout_constraintBottom_toTopOf="@+id/back"
            app:layout_constraintTop_toBottomOf="@+id/edit_price"
            tools:layout_editor_absoluteX="7dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>